--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,12 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  image_picker: ^1.0.7
+  path_provider: ^2.1.2
+  permission_handler: ^11.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: any
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
